# vaapi-opencl-interop

./: CMakeLists.txt  README.md  media.patch  stack.md  trace.sh  vaocl.c  vaocl.cpp
clmem2vasurf/: CMakeLists.txt  cl2va.c
interop/: CMakeLists.txt  convert.cl  va_display.c  va_display_drm.c  vaocl.c
matvec/: CMakeLists.txt  matvec.c
